1/10 결재 파트 기능 작업 완료(대금지급결의서 포함), css작업 필요

--- a/src/main/resources/static/business_draft.html
+++ b/src/main/resources/static/business_draft.html
@@ -72,31 +72,31 @@
 					<textarea name="apprContent" id="kt_docs_ckeditor_classic" class="apprContent"></textarea>												
 				</div>	
 				<!--end::editor-->	
-					
-				<!--begin::Form 파일첨부 -->
+<!-- 				
+				begin::Form 파일첨부
 				<form class="form" action="#" method="post">
-					<!--begin::Input group-->
+					begin::Input group
 					<div class="form-group row">
-						<!--begin::Label-->
+						begin::Label
 						<label class="col-lg-2 col-form-label text-lg-right">파일첨부 :</label>
-						<!--end::Label-->
+						end::Label
 
-						<!--begin::Col-->
+						begin::Col
 						<div class="col-lg-10">
-							<!--begin::Dropzone-->
+							begin::Dropzone
 							<div class="dropzone dropzone-queue mb-2" id="kt_dropzonejs_example_2">
-								<!--begin::Controls-->
+								begin::Controls
 								<div class="dropzone-panel mb-lg-0 mb-2">
 									<a class="dropzone-select btn btn-sm btn-primary me-2">Attach files</a>
 									<a class="dropzone-upload btn btn-sm btn-light-primary me-2">Upload All</a>
 									<a class="dropzone-remove-all btn btn-sm btn-light-primary">Remove All</a>
 								</div>
-								<!--end::Controls-->
+								end::Controls
 
-								<!--begin::Items-->
+								begin::Items
 								<div class="dropzone-items wm-200px">
 									<div class="dropzone-item" style="display:none">
-										<!--begin::File-->
+										begin::File
 										<div class="dropzone-file">
 											<div class="dropzone-filename" title="some_image_file_name.jpg">
 												<span data-dz-name>some_image_file_name.jpg</span>
@@ -105,9 +105,9 @@
 
 											<div class="dropzone-error" data-dz-errormessage></div>
 										</div>
-										<!--end::File-->
+										end::File
 
-										<!--begin::Progress-->
+										begin::Progress
 										<div class="dropzone-progress">
 											<div class="progress">
 												<div
@@ -116,30 +116,30 @@
 												</div>
 											</div>
 										</div>
-										<!--end::Progress-->
+										end::Progress
 
-										<!--begin::Toolbar-->
+										begin::Toolbar
 										<div class="dropzone-toolbar">
 											<span class="dropzone-start"><i class="bi bi-play-fill fs-3"></i></span>
 											<span class="dropzone-cancel" data-dz-remove style="display: none;"><i class="bi bi-x fs-3"></i></span>
 											<span class="dropzone-delete" data-dz-remove><i class="bi bi-x fs-1"></i></span>
 										</div>
-										<!--end::Toolbar-->
+										end::Toolbar
 									</div>
 								</div>
-								<!--end::Items-->
+								end::Items
 							</div>
-							<!--end::Dropzone-->
+							end::Dropzone
 
-							<!--begin::Hint-->
+							begin::Hint
 							<span class="form-text text-muted">파일 개당 최대 크기 10MB, 5개 제한.</span>
-							<!--end::Hint-->
+							end::Hint
 						</div>
-						<!--end::Col-->
+						end::Col
 					</div>
-					<!--end::Input group-->
-				</form>
-				<!--end::Form 파일첨부 -->
+					end::Input group
+				</form> 
+				end::Form 파일첨부 -->
 			</div>
 			<!--end::Card body-->			
 		</div>
@@ -178,7 +178,7 @@ var myEditor;
         console.error(error);
      }); 
 
-
+/* 
 // set the dropzone container id
 	const id = "#kt_dropzonejs_example_2";
 	const dropzone = document.querySelector(id);
@@ -268,6 +268,6 @@ var myEditor;
 			dropzone.querySelector('.dropzone-remove-all').style.display = "none";
 		}
 	});
-
+ */
 </script>
 </html>
