--- a/src/main/resources/static/html/payment_resolution.html
+++ b/src/main/resources/static/html/payment_resolution.html
@@ -66,7 +66,7 @@
 				<!--begin::Input group-->
 				<div class="input-group mb-5" style="margin-top: 20px;">
 					<span class="input-group-text flex-grow-1" id="inputGroup-sizing-default" style="width: 20%;">수신자</span>
-					<input type="text" id="inputReceiver" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
+					<input type="text" id="inputReceiver" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;" readonly="readonly"/>
 				</div>
 				<!--end::Input group-->
 				<!--begin::Input group-->
@@ -80,7 +80,7 @@
 					<span class="input-group-text" id="inputGroup-sizing-default" style="width: 20%;">발주번호&nbsp;&nbsp;
 						<button type="button" id="orderNumSearch" class="btn btn-light-primary btn-sm mt-2 me-2" data-bs-toggle="modal" data-bs-target="#kt_modal_10">검색</button>	
 					</span>											
-					<input type="text" id="orderNum" name="orderNum" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"/>
+					<input type="text" id="orderNum" name="orderNum" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" readonly="readonly"/>
 				</div>
 				
 				<div class="table-responsive">											
@@ -234,6 +234,7 @@
 				}, function(start, label) {
 			        // 날짜가 선택됐을 때의 콜백 함수
 			        var orderDate = start.format('YYYY-MM-DD');
+			        console.log(orderDate);
 			        // 선택한 날짜에 대한 데이터를 가져오는 함수 호출
 			        getOrderData(orderDate);
 				});
@@ -310,10 +311,10 @@
 		    $.each(items, function (index, item) {
 		        var row = '<tr>' +
 		                      '<td>' + item.productName + '</td>' +
-		                      '<td>' + item.unitQuantity + '</td>' +
-		                      '<td>' + item.netQuantity + '</td>' +
-		                      '<td>' + item.purchasePrice + '</td>' +
-		                      '<td>' + item.totalPricePerProduct + '</td>' +
+		                      '<td>' + item.unitQuantity.toLocaleString() + '</td>' +
+		                      '<td>' + item.netQuantity.toLocaleString() + '</td>' +
+		                      '<td>' + item.purchasePrice.toLocaleString() + '</td>' +
+		                      '<td>' + item.totalPricePerProduct.toLocaleString() + '</td>' +
 		                  '</tr>';
 		       orderTable.append(row);
 		       totalAmount += item.totalPricePerProduct;
