--- a/src/main/resources/static/html/reqVac.html
+++ b/src/main/resources/static/html/reqVac.html
@@ -58,7 +58,7 @@
 				<!--begin::Input group-->
 				<div class="input-group mb-5" style="margin-top: 20px;">
 					<span class="input-group-text flex-grow-1" id="inputGroup-sizing-default" style="width: 20%;">수신자</span>
-					<input type="text" id="inputReceiver" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
+					<input type="text" id="inputReceiver" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;" readonly="readonly"/>
 				</div>
 				<!--end::Input group-->
 				<!--begin::Input group-->
